Added contract model classes for base types, update to latest packages

--- a/upromisapi/appsettings.json
+++ b/upromisapi/appsettings.json
@@ -9,5 +9,8 @@
     "ExcelPackage": {
       "LicenseContext": "NonCommercial" //The license context used
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;database=upromis.contracts;trusted_connection=yes;"
   }
 }
