--- a/upromis.identityserver/uPromis.IdentityServer.csproj
+++ b/upromis.identityserver/uPromis.IdentityServer.csproj
@@ -10,6 +10,11 @@
 
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.3" />
 
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="System.Security.Principal.Windows" Version="4.7.0" />
     
