--- a/upromisapi/appsettings.Development.json
+++ b/upromisapi/appsettings.Development.json
@@ -10,5 +10,8 @@
     "ExcelPackage": {
       "LicenseContext": "NonCommercial" //The license context used
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;database=upromis.contracts;trusted_connection=yes;"
   }
 }
