Improved data model

--- a/upromisapi/upromiscontractapi.csproj
+++ b/upromisapi/upromiscontractapi.csproj
@@ -17,6 +17,10 @@
     <Compile Remove="Migrations\20200511194217_InitialCreate.Designer.cs" />
     <Compile Remove="Migrations\20200511194828_InitialCreate.cs" />
     <Compile Remove="Migrations\20200511194828_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200511200708_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200511200708_InitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20200512194046_InitialCreate.cs" />
+    <Compile Remove="Migrations\20200512194046_InitialCreate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
