--- a/upromisattachmentapi/upromisattachmentapi.csproj
+++ b/upromisattachmentapi/upromisattachmentapi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>upromisattachmentapi.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
