--- a/upromis.identityserver/uPromis.IdentityServer.csproj
+++ b/upromis.identityserver/uPromis.IdentityServer.csproj
@@ -6,6 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20201216205901_Add Proposal reference to Contract.cs" />
+    <Compile Remove="Data\Migrations\20201216205901_Add Proposal reference to Contract.Designer.cs" />
+    <Compile Remove="Data\Migrations\20201219204238_test.cs" />
+    <Compile Remove="Data\Migrations\20201219204238_test.Designer.cs" />
+    <Compile Remove="Data\Migrations\20201219204313_test2.cs" />
+    <Compile Remove="Data\Migrations\20201219204313_test2.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="3.1.3" />
 
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.1.3" />
@@ -27,9 +36,5 @@
     </PackageReference>
 
     <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 </Project>
