--- a/uPromis.Microservice.Identityserver/uPromis.Microservice.Identityserver.csproj
+++ b/uPromis.Microservice.Identityserver/uPromis.Microservice.Identityserver.csproj
@@ -21,5 +21,7 @@
 
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.2" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 </Project>
